# self-negotiated-contracts

./: .gitignore  pyproject.toml
docs/notes/: 2026-06-07-baseline-seeds.md  2026-06-07-first-run.md  2026-06-07-rlar-focus-module.md  2026-06-08-arm-a-baseline.md
experiments/: arm_a_no_contract.py  arm_b_imposed.py  arm_c_negotiated.py  arm_d_monitored.py  arm_e_rlar.py
scripts/: query_response_order.py
src/: contract.py  monitor.py  negotiator.py  protocol.py
src/marketplace_integration/: __init__.py
src/rl_ar/: focus_module.py  regulariser.py  trainer.py
tests/: test_contract.py  test_marketplace_integration.py  test_protocol.py
