[project]
name = "self-negotiated-contracts"
version = "0.1.0"
description = "Self-negotiated contracts for multi-agent LLM marketplaces — MSc AI research, Imperial College London"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
rl = [
    "torch>=2.3",
    "trl>=0.9",
    "transformers>=4.41",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
